# Gear_Modeller

./: .gitignore  Gear_Model.m  Gear_Model.mltbx  Gear_model.m  Gear_model.mlapp  LICENSE  README.md  toolbox.ignore
Python_based/: README.md  pyproject.toml  requirements.txt
Python_based/gear_model/: __init__.py  __main__.py  main.py
Python_based/gear_model/generator/: __init__.py  cycloid_rack.py  cycloid_toothing.py  involute_toothing.py  tool_root_rounding.py  trapezoidal_rack.py
Python_based/gear_model/resources/: paths.py
Python_based/gear_model/resources/standard_module_series/: Module_series_1.txt  Module_series_2.txt
Python_based/gear_model/resources/text/: Animation_tab_parameters_equations_1.txt  Animation_tab_parameters_equations_2.txt  Profile_tab_parameters_equations_cycloid.txt  Profile_tab_parameters_equations_involute.txt
Python_based/gear_model/resources/text/Czech/: CZ_animation_tab_cycloid.txt  CZ_animation_tab_graphical_additions.txt  CZ_animation_tab_involute.txt  CZ_animation_tab_parameters.txt  CZ_home_tab.txt  CZ_outer.txt  CZ_profile_tab_circles.txt  CZ_profile_tab_parameters.txt
Python_based/gear_model/resources/text/English/: EN_animation_tab_cycloid.txt  (+7 more)
Python_based/gear_model/ui/: __init__.py  animation_tab.py  home_tab.py  main_window.py  mpl_canvas.py  output_window.py  profile_tab.py
Python_based/gear_model/utils/: __init__.py  export_text.py  language_utils.py  line_style.py  module_series.py
Python_based/tests/: test_cycloid_toothing.py  test_involute_toothing.py  test_tool_root_rounding.py  test_trapezoidal_rack.py
(+253 files in other folders)
