[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gear_model"
version = "1.1.0"
description = "Gear Modeller - involute and cycloidal gear tooth profile generator (Python port)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Richard Timko (ported to Python)"}]
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "PySide6>=6.5",
]

[project.scripts]
gear-model = "gear_model.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gear_model*"]

[tool.setuptools.package-data]
"gear_model" = ["resources/**/*"]
